--- a/DOTNETCORE/EFCoreSamples/ChangeTrackingEvents/11_ChangeTrackingEvents.csproj
+++ b/DOTNETCORE/EFCoreSamples/ChangeTrackingEvents/11_ChangeTrackingEvents.csproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>ChangeTrackingEvents</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
   </ItemGroup>
+
 </Project>
