--- a/DOTNETCORE/EFCoreSamples/Performance/packages.config
+++ b/DOTNETCORE/EFCoreSamples/Performance/packages.config
@@ -2,30 +2,30 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net47" />
-  <package id="Microsoft.EntityFrameworkCore" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Logging" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Options" version="3.0.0-preview3.19153.1" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="3.0.0-preview3.19153.1" targetFramework="net47" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net47" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net47" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.4" targetFramework="net47" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.4" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
-  <package id="System.Collections.Immutable" version="1.6.0-preview3.19128.7" targetFramework="net47" />
-  <package id="System.ComponentModel.Annotations" version="4.6.0-preview3.19128.7" targetFramework="net47" />
-  <package id="System.Data.SqlClient" version="4.7.0-preview3.19128.7" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.6.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview3.19128.7" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
   <package id="System.Interactive.Async" version="3.2.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
@@ -36,7 +36,7 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview3.19128.7" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
 </packages>
