--- a/DOTNETCORE/EFCoreSamples/PerformanceEf6/01_PerformanceEf6.csproj
+++ b/DOTNETCORE/EFCoreSamples/PerformanceEf6/01_PerformanceEf6.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PerformanceEf6</RootNamespace>
     <AssemblyName>PerformanceEf6</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
